2013-09-05  Andreas K. Foerster  <info@akfoerster.de>

	* mfinger.xbm, mfinger_mask.xbm: new files
	avatar-sdl.c: adapted

2013-08-16  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-sdl.c, audio-sdl.c, avatar.c: start porting to SDL2

------------------------------------------------------------------------

2013-08-13  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.24.2 released

2013-08-09  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_set_resize_key): new function
	lua/akfavatar-graphic.c (lgraphic_set_resize_key): new function
	lua/four_in_a_row.lua: adapted
	lua/clock.lua: adapted

2013-08-07  Andreas K. Foerster  <info@akfoerster.de>

	* lua/four_in_a_row.lua: play against computer

2013-08-05  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c, avtinternals.h (avt_last_key): new function

2013-08-04  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-graphic.c (lgraphic_set_pointer_motion_key):
	new function

	* avatar-sdl.c (avt_analyze_event):
	add pointer_motion_key only if it isn't there yet

2013-08-03  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-graphic.c (lgraphic_set_pointer_buttons_key)
	(lgraphic_get_pointer_position): new functions
	(luaopen_graphic, lgraphic_show): adapted

------------------------------------------------------------------------

2013-07-29  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.24.1 released

2013-07-25  Andreas K. Foerster  <info@akfoerster.de>

	* configure: accept --with-linuxfb

2013-07-19  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-akfavatar-prg.c (preload_module): new function
	(initialize_lua): preload module "akfavatar-graphic"

2013-07-18  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_put_char, avt_put_raw_char):
	full check if inside viewport

2013-07-13  Andreas K. Foerster  <info@akfoerster.de>

	* lua/multiplication.lua: clear board (no scrolling)

	* avatar.c (avt_show_text_cursor): text cursor modified
